Added images and shared images module
