# backend/server/config/swagger/main.json
@@ -1,10 +1,15 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/api/users/register": {
+    "/api/auth/register": {
       "post": {
-        "description": "Register user",
+        "description": "User Register Api",
         "parameters": [
+          {
+            "name": "name",
+            "paramType": "string",
+            "required": true
+          },
           {
             "name": "email",
             "paramType": "string",
@@ -14,36 +19,6 @@
             "name": "password",
             "paramType": "string",
             "required": true
-          },
-          {
-            "name": "name",
-            "paramType": "string",
-            "required": true
-          },
-          {
-            "name": "dob",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "gender",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "provider",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "providerId",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "authToken",
-            "paramType": "string",
-            "required": false
           }
         ],
         "responses": {
@@ -60,9 +35,9 @@
         }
       }
     },
-    "/api/users/login": {
+    "/api/auth/login": {
       "post": {
-        "description": "User Login",
+        "description": "User Login Api",
         "parameters": [
           {
             "name": "email",
@@ -73,21 +48,6 @@
             "name": "password",
             "paramType": "string",
             "required": true
-          },
-          {
-            "name": "provider",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "providerId",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "authToken",
-            "paramType": "string",
-            "required": false
           }
         ],
         "responses": {
@@ -106,7 +66,7 @@
     },
     "/api/users/logout": {
       "get": {
-        "description": "User logout",
+        "description": "User Logout Api",
         "responses": {
           "200": {
             "content": {
@@ -121,19 +81,14 @@
         }
       }
     },
-    "/api/users/send-otp": {
+    "/api/images/upload": {
       "post": {
-        "description": "Send OTP",
+        "description": "Image Upload Api",
         "parameters": [
           {
-            "name": "token",
-            "in": "header",
-            "description": "Bearer token to be passed as a header",
-            "required": true
-          },
-          {
-            "name": "phone",
-            "paramType": "string",
+            "name": "images",
+            "type": "file",
+            "description": "Array of files to upload.",
             "required": true
           }
         ],
@@ -143,7 +98,7 @@
               "application/json": {
                 "schema": {
                   "type": "string",
-                  "$ref": "server/config/swagger/definitions.json#/definitions/Send_OTP"
+                  "$ref": "server/config/swagger/definitions.json#/definitions/ImageUpload"
                 }
               }
             }
@@ -151,29 +106,16 @@
         }
       }
     },
-    "/api/users/resend-otp": {
-      "post": {
-        "description": "Resend OTP",
-        "parameters": [
-          {
-            "name": "token",
-            "in": "header",
-            "description": "Bearer token to be passed as a header",
-            "required": true
-          },
-          {
-            "name": "phone",
-            "paramType": "string",
-            "required": true
-          }
-        ],
+    "/api/images": {
+      "get": {
+        "description": "Images Fetch Api",
         "responses": {
           "200": {
             "content": {
               "application/json": {
                 "schema": {
                   "type": "string",
-                  "$ref": "server/config/swagger/definitions.json#/definitions/Send_OTP"
+                  "$ref": "server/config/swagger/definitions.json#/definitions/ImagesFetch"
                 }
               }
             }
@@ -181,73 +123,17 @@
         }
       }
     },
-    "/api/users/verify-otp": {
-      "post": {
-        "description": "Verify OTP",
-        "parameters": [
-          {
-            "name": "token",
-            "in": "header",
-            "description": "Bearer token to be passed as a header",
-            "required": true
-          },
-          {
-            "name": "phone",
-            "paramType": "string",
-            "required": true
-          },
-          {
-            "name": "code",
-            "paramType": "number",
-            "required": true
-          },
-          {
-            "name": "userId",
-            "paramType": "number",
-            "required": true
-          }
-        ],
+    "/api/images/{imageId}/tag": {
+      "put": {
+        "description": "Images Fetch Api",
+        "parameters": [{ "in": "path", "name": "imageId", "required": "true" }],
         "responses": {
           "200": {
             "content": {
               "application/json": {
                 "schema": {
                   "type": "string",
-                  "$ref": "server/config/swagger/definitions.json#/definitions/Verify_OTP"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/users/check-user-exist": {
-      "post": {
-        "description": "Check User is exist in DB or not",
-        "parameters": [
-          {
-            "name": "email",
-            "paramType": "string",
-            "required": true
-          },
-          {
-            "name": "provider",
-            "paramType": "string",
-            "required": false
-          },
-          {
-            "name": "providerId",
-            "paramType": "string",
-            "required": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string",
-                  "$ref": "server/config/swagger/definitions.json#/definitions/Check_User_Exist"
+                  "$ref": "server/config/swagger/definitions.json#/definitions/ImageTag"
                 }
               }
             }
