# backend/server/modules/image/controller.js
@@ -5,16 +5,17 @@ import {
   successResponseNormalizer,
 } from '../../shared/normalizers/response';
 import { statusCodes } from '../../shared/utils/constants';
+import { IMAGE_MESSAGES } from '../../constants/messages';
 
 /**
- * @name uploadAttachment
- * @desc Upload attachment
+ * @name uploadImages
+ * @desc Upload images
  * @param {object} req
  * @param {object} res
  * @returns {Promise}
  */
 const uploadImage = async (req, res) => {
-  const { info, error } = logger('images/upload', (req.user || {}).id);
+  const { info, error } = logger('images/uploadImage', (req.user || {}).id);
   try {
     info(init);
     const { files, user } = req;
@@ -27,15 +28,16 @@ const uploadImage = async (req, res) => {
     res.status(statusCodes.BAD_REQUEST).json(errRes);
   }
 };
+
 /**
- * @name fetchAttachment
- * @desc fetch attachment
+ * @name fetchImage
+ * @desc fetch image
  * @param {object} req
  * @param {object} res
  * @returns {Promise}
  */
 const fetchImage = async (req, res) => {
-  const { info, error } = logger('images/fetch', (req.user || {}).id);
+  const { info, error } = logger('images/fetchImage', (req.user || {}).id);
   try {
     info(init);
     const { user } = req;
@@ -54,12 +56,43 @@ const fetchImage = async (req, res) => {
   }
 };
 
+/**
+ * @name fetchImages
+ * @desc fetch images
+ * @param {object} req
+ * @param {object} res
+ * @returns {Promise}
+ */
 const fetchImages = async (req, res) => {
-  const { info, error } = logger('images/fetch', (req.user || {}).id);
+  const { info, error } = logger('images/fetchImages', (req.user || {}).id);
   try {
     info(init);
     const { user } = req;
-    const response = await ImageService.fetchImages(user);
+    const images = await ImageService.fetchImages(user);
+
+    const response = successResponseNormalizer(IMAGE_MESSAGES.FETCH_SUCCESSFULL, images);
+    res.json(response);
+    info(responded);
+  } catch (err) {
+    error(err);
+    const errRes = errorResponseNormalizer(err);
+    res.status(statusCodes.BAD_REQUEST).json(errRes);
+  }
+};
+
+/**
+ * @name shareImage
+ * @desc Share Image with other users
+ * @param {object} req
+ * @param {object} res
+ * @returns {Promise}
+ */
+const shareImage = async (req, res) => {
+  const { info, error } = logger('images/shareImage', (req.user || {}).id);
+  try {
+    info(init);
+    const { body, user, params } = req;
+    const response = await ImageService.shareImage(params.id, user, body.users);
     res.json(response);
     info(responded);
   } catch (err) {
@@ -94,6 +127,7 @@ const deleteImage = async (req, res) => {
 
 export default {
   uploadImage,
+  shareImage,
   fetchImage,
   fetchImages,
   deleteImage,
